[package]
name = "clipboard-sync"
version = "0.1.0"
readme = "README.md"
authors = ["Tomas Jakstas <tom.jakstas@gmail.com>"]
edition = "2018"
description = "Secure clipboard sync across your devices"
homepage = "https://github.com/songokas/clipboard-sync"
repository = "https://github.com/songokas/clipboard-sync"
license = "LICENSE"

[dependencies]
chacha20poly1305 = "0.7"
base64 = "0.13"
chrono = "0.4"
rand = "0.7"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
futures = "0.3"
clap = {version = "2.2", features = ["yaml"]}
tokio = { version = "0.3", features = ["full"] }
tokio-test = "0.3"
log = "0.4"
env_logger = "0.7"
flate2 = "1.0"
walkdir = "2"
dirs = "3.0"
cached = "0.22"
jni = "0.18"
lazy_static = "1.4"
indexmap = { version = "1.6", features = ["serde-1"] }
err-derive = "0.3.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9"

[build-dependencies]
cargo-deb = "1.28"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies.quinn]
version = "0.6.1"
optional = true

[dependencies.quiche]
version = "0.6.0"
optional = true

[dependencies.clipboard]
version = "0.5"
optional = true

[features]
default = ["frames", "clipboard"]
quic = ["quiche"]
frames = []

[package.metadata.deb]
maintainer = "Tomas Jakstas <tom.jakstas@gmail.com>"
copyright = "2020, Tomas Jakstas <tom.jakstas@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
Secure clipboard synchronization accross your devices\
"""
#depends = "libxcb-render0 (>= 1.13.1), libxcb-shape0 (>= 1.13.1), libxcb1 (>= 1.13.1), libbsd0 (>= 0.9.1), libxdmcp6 (>= 1:1.1.2), libxau6 (>= 1:1.0.8), libc6 (>= 2.28), libxcb-xfixes0 (>= 1.13.1)"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/clipboard-sync", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
    ["debian/service", "lib/systemd/user/clipboard-sync.service", "644"], 
]

[package.metadata.deb.variants.aarch64]
depends = "libxcb-render0 (>= 1.13.1), libxcb-shape0 (>= 1.13.1), libxcb1 (>= 1.13.1), libbsd0 (>= 0.9.1), libxdmcp6 (>= 1:1.1.2), libxau6 (>= 1:1.0.8), libc6 (>= 2.28), libxcb-xfixes0 (>= 1.13.1)"

[package.metadata.deb.variants.headless]
features = ["frames"]
default-features = false
depends = "libc6 (>= 2.28)"

[package.metadata.rpm]
package = "clipboard-sync"
cargo = { buildflags = ["--release"] }
targets = { clipboard-sync = { path = "/usr/bin/clipboard-sync" } }
files = { "../debian/service" = { path = "/lib/systemd/user/clipboard-sync.service" } }
