[package]
name = "clipboard-sync"
version = "2.0.0"
readme = "README.md"
authors = ["Tomas Jakstas <tom.jakstas@gmail.com>"]
edition = "2018"
description = "Secure clipboard sync across your devices"
homepage = "https://github.com/songokas/clipboard-sync"
repository = "https://github.com/songokas/clipboard-sync"
license = "LICENSE"

[dependencies]
chacha20poly1305 = "0.8"
base64 = "0.13"
chrono = "0.4"
rand = "0.8"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
clap = {version = "2.2", features = ["yaml"]}
tokio = { version = "1.5", features = ["full"] }
log = "0.4"
env_logger = "0.8"
flate2 = "1.0"
walkdir = "2"
dirs = "3.0"
cached = "0.23"
jni = "0.19"
lazy_static = "1.4"
indexmap = { version = "1.6", features = ["serde-1"] }
laminar = { version = "0.5" }
thiserror = "1.0"
notify = "4.0"
# @TODO simplify/replace/remove
futures = "0.3"
crossbeam-channel = "0.5"
flume = "0.10"
mio = "0.7"
#

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"

[build-dependencies]
cargo-deb = "1.28"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tokio-test = "0.4"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies.public-ip]
version = "0.2"
optional = true

[dependencies.quinn]
version = "0.7"
optional = true

[dependencies.quiche]
version = "0.8"
optional = true

[dependencies.rustls]
version = "0.19"
optional = true

[dependencies.clipboard]
# using custom implementation due too multiple clipboard types
git = "https://github.com/songokas/rust-clipboard.git"
branch = "multiple-targets"
optional = true
# path = "../rust-clipboard"

[dependencies.rsntp]
version = "2.0.0"
optional = true

[features]

# default quic implementations
quic = []
quic-quiche = ["quic", "quiche"]
quic-quinn = ["quic", "quinn", "rustls"]

ntp = ["rsntp"]

frames = []
default = ["frames", "clipboard", "public-ip", "ntp"]


[package.metadata.deb]
maintainer = "Tomas Jakstas <tom.jakstas@gmail.com>"
copyright = "2020, Tomas Jakstas <tom.jakstas@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
Secure clipboard synchronization accross your devices\
"""
#depends = "libxcb-render0 (>= 1.13.1), libxcb-shape0 (>= 1.13.1), libxcb1 (>= 1.13.1), libbsd0 (>= 0.9.1), libxdmcp6 (>= 1:1.1.2), libxau6 (>= 1:1.0.8), libc6 (>= 2.28), libxcb-xfixes0 (>= 1.13.1)"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/clipboard-sync", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
    ["debian/service", "lib/systemd/user/clipboard-sync.service", "644"], 
]

[package.metadata.deb.variants.aarch64]
depends = "libxcb-render0 (>= 1.13.1), libxcb-shape0 (>= 1.13.1), libxcb1 (>= 1.13.1), libbsd0 (>= 0.9.1), libxdmcp6 (>= 1:1.1.2), libxau6 (>= 1:1.0.8), libc6 (>= 2.28), libxcb-xfixes0 (>= 1.13.1)"

[package.metadata.deb.variants.headless]
features = ["frames", "public-ip", "ntp"]
default-features = false
depends = "libc6 (>= 2.28)"

[package.metadata.rpm]
package = "clipboard-sync"
cargo = { buildflags = ["--release"] }
targets = { clipboard-sync = { path = "/usr/bin/clipboard-sync" } }
files = { "../debian/service" = { path = "/lib/systemd/user/clipboard-sync.service" } }
